# carbon-notes

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  info.rs  main.rs  render.rs  sync.rs
src/render/: code.rs  header.rs  index.rs  mathjax.rs  note.rs  style.rs  stylesheet.rs  template.rs
src/sync/: hash.rs  incremental.rs  item.rs  object.rs  store.rs  tree.rs  walk.rs
style/: github.css
