[package]
name = "carbon"
version = "0.1.0"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"
publish = false

[dependencies]
clap = "2.32.0"
dirs = "1.0.5"
globset = "0.4.3"
maud = "0.20.0"
pulldown-cmark = "0.4.0"
regex = "1.1.5"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
syntect = "3.2.0"
